--- a/src/pages/Home/banner/banner.css
+++ b/src/pages/Home/banner/banner.css
@@ -1,5 +1,5 @@
 .custom-banner{
-    background-image: url('http://asianitbd.com/wp/hopemedical/wp-content/uploads/2016/10/1.jpg');
+    background-image: url('https://www.tourx-react.egenslab.com/static/media/banner-3.ff884c34.png');
     background-size: 100%;
     background-repeat: no-repeat;
 }
